# Sentience

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  README.md  build.sh  docker-bake.hcl  docker-compose.yml  out_subset.jsonl  schema.json  subset.json
backend/: .env.example  Cargo.toml  introductions.json  sample_resp_openai.json  subset.json
backend/src/: diagram.rs  lib.rs  main.rs  params.rs  tui.rs
backend/src/embed/: gemini.rs  mod.rs
backend/src/input/: json_file.rs  mod.rs  sqlite.rs
backend/src/score/: gemini.rs  mod.rs  models.rs  openai.rs
backend/src/storage/: libsql.rs  mod.rs  sqlxlite.rs
chart/: Chart.yaml  values.yaml
chart/templates/: _cors-env.yaml  _discord-env.yaml  _keycloak-env.yaml  _postgres-env.yaml  api.yaml  backend.yaml  frontend.yaml  iam.yaml
common/: Cargo.toml  diesel.toml
common/db/: introduction_messages_table.sql  message_table.sql  scores_table.sql
common/migrations/2026-03-12-020431-0000_add_user_and_msgs_table/: down.sql  up.sql
common/migrations/2026-03-12-021729-0000_remove_crdat_updat/: down.sql  up.sql
common/migrations/2026-03-12-141413-0000_fix_nullable_fields/: down.sql  up.sql
common/src/: db_schema.rs  diesel_schema.rs  lib.rs  models.rs  schema.rs
frontend/: .env.example  Cargo.toml  README.md
frontend/src/: lib.rs  listener.rs  main.rs
frontend/src/commands/: mod.rs  my_diagram.rs  scrape_intros.rs
frontend/src/storage/: db.rs  mod.rs  postgres.rs  sqlxlite.rs
