[package]
name = "syl-scr"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
color-eyre = "0.6"
syl-scr-common = { path = "../common" }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
bytemuck = "1.25.0"

[profile.dev]
debug-assertions = false
