[package]
name = "syl-scr"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
syl-scr-common.workspace = true

dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
color-eyre.workspace = true
diesel.workspace = true
diesel-async.workspace = true
postgres-native-tls.workspace = true
native-tls.workspace = true
pgvector.workspace = true
plotters.workspace = true
chrono.workspace = true

image = "0.25.10"
futures = "0.3"

[profile.dev]
debug-assertions = false
