[package]
name = "syl-scr-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
diesel.workspace = true
pgvector.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
