[package]
name = "syl-scr-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
libsql = "0.9.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
syl-scr-common = { path = "../common" }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
serenity = "0.12.5"
