[package]
name = "syl-scr-bot"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
syl-scr-common.workspace = true

dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
diesel.workspace = true
diesel-async.workspace = true
pgvector.workspace = true
futures.workspace = true

chrono = "0.4"
serenity = "0.12.5"
